# code_quality_calc

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  python_vscode_quality.sh  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  quality.yml
docs/: 00-mindset-history.md  01-overview.md  02-setup.md  03-structure.md  04-tooling.md  05-testing.md  06-typing.md  07-cli.md  08-ci.md  09-vscode.md  10-security.md  11-workflows.md  12-troubleshooting.md  appendix-configs.md  careers.md  glossary.md  index.md
references/python_super_course_source/: .gitignore  README.md  glossary.md  learning-roadmap.md
references/python_super_course_source/.github/workflows/: main.yml
references/python_super_course_source/assignments/: 00-environment-setup.md  01-virtual-env-pip.md  02-pylint-code-quality.md  03-pytest.md  04-git-workflows.md  05-cicd-github-actions.md  06-configuration-management.md  07-packaging-distribution.md  08-cli-deployment.md
references/python_super_course_source/docs/: 00-introduction-and-concepts.md  01-project-setup.md  02-development-workflow.md  03-testing.md  04-code-quality.md  05-github-actions.md  06-vscode-setup.md  07-git-best-practices.md  08-configuration-management.md  09-advanced-modules-plan.md  README.md
references/python_super_course_source/docs/advanced-track/: ADR_TEMPLATE.md  README.md  _TEMPLATE.md
references/python_super_course_source/docs/advanced-track/24-api-design-governance/: README.md
references/python_super_course_source/docs/advanced-track/25-observability-metrics-traces/: README.md
references/python_super_course_source/docs/advanced-track/26-security-python-apis/: README.md
references/python_super_course_source/docs/advanced-track/27-sql-orm-migrations/: README.md
references/python_super_course_source/docs/advanced-track/28-async-background-jobs/: README.md
references/python_super_course_source/docs/advanced-track/29-types-static-analysis/: README.md
references/python_super_course_source/docs/advanced-track/30-resilience-patterns/: README.md
references/python_super_course_source/docs/advanced-track/31-documentation-developer-experience/: README.md
references/python_super_course_source/docs/advanced-track/32-data-formats-deep-dive/: README.md
references/python_super_course_source/docs/advanced-track/33-advanced-performance-optional/: README.md
references/python_super_course_source/docs/advanced-track/34-cloud-kubernetes-fundamentals-optional/: README.md
references/python_super_course_source/docs/advanced-track/A1-defensive-programming/: README.md
references/python_super_course_source/docs/advanced-track/A2-dry-cohesion-coupling/: README.md
references/python_super_course_source/docs/advanced-track/B3-iterators-generators/: README.md
references/python_super_course_source/docs/advanced-track/B4-performance-fundamentals/: README.md
references/python_super_course_source/docs/advanced-track/B5-regular-expressions/: README.md
references/python_super_course_source/docs/advanced-track/C6-third-party-libraries/: README.md
references/python_super_course_source/docs/advanced-track/C7-packaging-pyproject/: README.md
references/python_super_course_source/docs/advanced-track/C8-fastapi-pydantic/: README.md
references/python_super_course_source/docs/advanced-track/C9-config-env-vars/: README.md
references/python_super_course_source/docs/advanced-track/D10-data-formats/: README.md
references/python_super_course_source/docs/advanced-track/D11-pandas-dataframes/: README.md
references/python_super_course_source/docs/advanced-track/E12-core-oop/: README.md
references/python_super_course_source/docs/advanced-track/E13-design-patterns/: README.md
references/python_super_course_source/docs/advanced-track/F14-vscode-debugger/: README.md
references/python_super_course_source/docs/advanced-track/G15-refactoring-fundamentals/: README.md
references/python_super_course_source/docs/advanced-track/G16-pattern-families/: README.md
references/python_super_course_source/docs/advanced-track/G17-dependencies-explicit-reproducible/: README.md
references/python_super_course_source/docs/advanced-track/G18-build-release-run/: README.md
references/python_super_course_source/docs/advanced-track/G19-processes-concurrency-disposability/: README.md
references/python_super_course_source/docs/advanced-track/G20-port-binding-backing-services/: README.md
references/python_super_course_source/docs/advanced-track/G21-dev-prod-parity/: README.md
references/python_super_course_source/docs/advanced-track/G22-logs-event-streams/: README.md
src/: main.py
src/operations/: __init__.py
tests/: test_cli.py  test_operations.py  test_operations_param.py  test_sanity.py
(+1 files in other folders)
