[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project1"
version = "0.1.0"
description = "A minimal Python project scaffold with pytest and pylint."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["template", "pytest", "pylint"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
# If you later add a src/ package directory, uncomment and adjust:
# package-dir = {"" = "src"}
