[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calc-start-f25"
version = "0.1.0"
description = "Basic calculator demo with CLI"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["calculator", "teaching", "template"]

[project.scripts]
calc = "src.main:main"

[tool.setuptools]
packages = ["src", "src.operations"]

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true

[tool.flake8]
max-line-length = 100
exclude = [
  ".venv",
  "venv",
  ".git",
  "__pycache__",
  "build",
  "dist",
]
extend-ignore = [
  "E203",  # Black compatibility (whitespace before :)
  "W503"   # Line-break before binary operator (Black-compatible style)
]
per-file-ignores = [
  "__init__.py:F401",  # allow package re-exports
]
# Plugins installed (bugbear/comprehensions) will contribute additional checks automatically.

[tool.pylint.main]
py-version = "3.11"
ignore-paths = ["tests/", ".venv", "venv"]
jobs = 0

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 6
max-attributes = 10
max-parents = 7
max-public-methods = 20

[tool.pylint.reports]
score = false

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.pylint."messages control"]
disable = [
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods
  "R0801",  # duplicate-code (not useful in tiny projects)
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z", "df", "id"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
  "-q",
  "-ra"
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
exclude = [
  "tests/",
]
